--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Prasowka</title>
+</head>
+<body>
+    <h1>Polska</h1>
+    <div>Niebezpieczne warunki pogodowe, czyli ciągłe obfite opady deszczu, które nawiedziły w sobotę 14 września Polske spowodwały powódź i ogromne zniszczenia. Bardzo trudna sytuacja jest w Dolnym Śląsku i na Opolszczyźnie, została ogłoszona tam klęska żywiołowa 16 września na okres trzydziestu dni. Najbardziej ucierpiały takie miejscowości jak:  Nysa Kłodzka, Kłodzko, Lądek Zdrój oraz Głuchołazy.  Dla poszkodowanych trwają zbiórki żywności, wody pitnej butelkowej oraz środków higieny. Ogłoszono, że cztery osoby nie żyją. W dalszej chwilii ewakuowani są mieszkańcy z zalanych obszarów. Wrocław przygotowywuje się na falę kulminacyjną, która ma nadejść w środę 18 września.</div>
+</body>
+</html>
