--- a/index.html
+++ b/index.html
@@ -3,7 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <style>
+        body {
+          font-family: Arial;
+          background-color: #08040c;
+          color: white;
+        }
+        body h1 {
+          text-allign: center;
+          width: 60%;
+          left: 20%;
+          right: 20%;
+        }
+        body div {
+          width: 60%;
+          left: 20%;
+          right: 20%;
+        }
+    </style>
+    
     <title>Prasowka</title>
 </head>
 <body>
