--- a/index.html
+++ b/index.html
@@ -12,13 +12,11 @@
         body h1 {
           text-allign: center;
           width: 60%;
-          left: 20%;
-          right: 20%;
+          margin: auto;
         }
         body div {
           width: 60%;
-          left: 20%;
-          right: 20%;
+          margin: auto;
         }
     </style>
     
