--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
           text-allign: center;
           width: 60%;
           margin: auto;
+          padding-top: 3em;
         }
         body div {
           width: 60%;
@@ -25,5 +26,11 @@
 <body>
     <h1>Polska</h1>
     <div>Niebezpieczne warunki pogodowe, czyli ciągłe obfite opady deszczu, które nawiedziły w sobotę 14 września Polske spowodwały powódź i ogromne zniszczenia. Bardzo trudna sytuacja jest w Dolnym Śląsku i na Opolszczyźnie, została ogłoszona tam klęska żywiołowa 16 września na okres trzydziestu dni. Najbardziej ucierpiały takie miejscowości jak:  Nysa Kłodzka, Kłodzko, Lądek Zdrój oraz Głuchołazy.  Dla poszkodowanych trwają zbiórki żywności, wody pitnej butelkowej oraz środków higieny. Ogłoszono, że cztery osoby nie żyją. W dalszej chwilii ewakuowani są mieszkańcy z zalanych obszarów. Wrocław przygotowywuje się na falę kulminacyjną, która ma nadejść w środę 18 września.</div>
+    <h1>Świat</h1>
+    <div>Tajfun Yagi był najsilniejszym tajfunem od dekad, który uderzył w Wietnam. W sobote dotarł do północnej części kraju i spowodował niesamowite zniszczenia. W niedziele osłabł i zamienił się w burzę tropikalną, ale wywołał przy tym obfite opady deszczu tworzące powodzie. Od tego czasu północna część kraju zmaga się ze skutkami. Położone tam wioski znalazły się częściowo pod wodą, a tysiące ludzi ewakuowano. Pojawiły się również ofiary śmiertelne, co najmniej 197 osób zginęło, 128 uważa się za zaginione a ponad 800 jest rannych po przejściu Tajfunu. Ucierpieli także rolnicy, zginęło około 1,5 mln kurczaków i kaczek, a także 2,5 tyś świńm bawołów i krów. Ponad 250 tyś ha pól uprawnych zostało zniszczonych.</div>
+    <h1>Sport</h1>
+    <div>W najnowszej odsłonie mistrzostw świata World Endurance Championship (WEC) na japońskim torze Fuji ekipa AF Corse, z Robertem Kubicą za kierownicą, mierzyła się z serią niefortunnych zdarzeń kończąc rywalizację na 12. miejscu. W pierwszy weekend września, Robert Kubica i jego drużyna świętowali największy sukces w swojej karierze, triumfując na torze w Austin. Wynik pozwolił im awansować na drugą pozycję w klasyfikacji generalnej sezonu. Niestety siódma runda mistrzostw na torze Fuji nie była łaskawa, startując z trzynastej pozycji zespół AF Corse chciał szybko odrobić straty, lecz pokrzyżował im to już na drugim okrążeniu karambol, w którym uczestniczył Kubica. Uszkodzone zostały cztery samochody w tym ich Ferrari 499P.  Sędziowie nałożyli na zespół dodatkową karę, mimo tego zdołali awansować na 12. pozycję.</div>
+    <h1>Na luzie</h1>
+    <div>OpenAI wypuściło nową serię modeli sztucznej inteligencji, które poświęcają więcej czasu na generowanie myśli, które następnie zamieniane są w końcową odpowiedź, co pozwala na skuteczniejsze rozwiązywanie złożonych problemów. Pierwszy model z tej serii, o nazwie OpenAI o1, jest już dostępny do użytku dla każdego w mniejszej wersji. Nie ma on jeszcze takich funkcji jak odczytywanie zdjęć, lub szukanie w internecie, ale oferuje znaczący postęp w zadaniach wymagających zaawansowanego myślenia.</div>
 </body>
 </html>
